2018-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Optimizations for 8-bit loop counters (RFE #431).
	* src/stm8/gen.c:
	  Use bit set / reset instructions for bitfields (part of RFE #446).

2018-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve code generation for 8-bit integers (addition of small constants, paramter passing) (RFE #583).
	* rc/SDCCBBlock.c,
	  src/SDCCBBlock.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Improve const use.
	* src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/stm8/gen.c,
	  src/z80/peeph-z80.def:
	  Optimize postincrement (RFE #581).

2018-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue that resulted in overestimation of remat costs.
	* src/stm8/peeph.def:
	  Optimize out dead loads from stack.
	* device/include/asm/*/features.h,
	  device/lib/Makefile.in,
	  device/lib/_memmove.c,
	  device/lib/clean.mk,
	  device/lib/__memcpy.c,
	  device/lib/memcpy.c,
	  device/lib/stm8-large/memcpy.s,
	  device/lib/*/Makefile.in:
	  Library memcpy() cleanup.

2018-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide arithmetic right shift.

2018-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.h,
	  src/stm8/gen.c:
	  Basic support for rematerialization of stack addresses.

2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve wide addition.

2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve 32-bit right shift by 6 to 7.

2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCopt.c:
	  Port an operand narrowing optimization to UNARYMINUS.
	* src/stm8/gen.c:
	  Improve handling of trailing 0 in wide comparison.

2018-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/structassign.c: