@@ -1,9 +1,14 @@
+2018-10-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Use bit transfer instructions for 1-bit bit-field (part of RFE #446).
+
 2018-10-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def:
 	  Optimizations for 8-bit loop counters (RFE #431).
 	* src/stm8/gen.c:
-	  Use bit set / reset instructions for bitfields (part of RFE #446).
+	  Use bit set / reset instructions for 1-bit bit-fields (part of RFE #446).
 
 2018-10-08 Philipp Klaus Krause <pkk AT spth.de>
 
